# td2-cpp-geometric-shapes

./: .gitignore  EX1_Solution.md  README.md  completion_report.md  solution.md  题目.md
TD2 2/Sources_Question_2a/: CMakeLists.txt  TD_Cercle.cpp  TD_Cercle.h  TD_Point.cpp  TD_Point.h  TD_Quadri.cpp  TD_Quadri.h  TD_Triangle.cpp  TD_Triangle.h  TD_main.cpp  Test_All.cpp  Test_Complete.cpp  Test_Distance.cpp  Test_Triangle.cpp
TD2 2/Sources_Question_2d/: CMakeLists.txt  TD_Forme.cpp  TD_Forme.h  TD_Forme_Cercle.cpp  TD_Forme_Cercle.h  TD_Forme_Quadri.cpp  TD_Forme_Quadri.h  TD_Point.cpp  TD_Point.h  TD_Triangle.cpp  TD_Triangle.h  TD_main.cpp  Test_Complete.cpp  Test_Forme.cpp
